name:                mpoc-api
version:             0.1.0.0
synopsis:            mpoc API
description:         Please see README.md
homepage:            https://github.com/bnordbo/mpoc-api#readme
license:             AllRightsReserved
author:              Bjørn Nordbø
maintainer:          bn@strangedays.no
copyright:           2016 Bjørn Nordbø
category:            Other
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mpoc.App
  other-modules:       Mpoc.API
                     , Mpoc.API.Fragment
                     , Mpoc.API.Pocket
                     , Mpoc.Data
                     , Mpoc.Data.Types
                     , Mpoc.Types
  build-depends:       aeson
                     , amazonka
                     , amazonka-core
                     , amazonka-dynamodb
                     , base                >= 4.7 && < 5
                     , conduit
                     , errors
                     , exceptions
                     , http-api-data
                     , lens
                     , monad-control
                     , mtl
                     , servant-server
                     , text
                     , transformers
                     , transformers-base
                     , unordered-containers
                     , uuid
                     , wai
                     , warp
  default-language:    Haskell2010

executable mpoc-api
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mpoc-api
                     , warp
  default-language:    Haskell2010

test-suite mpoc-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mpoc-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bnordbo/mpoc-api
